# motif

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  claude.md  llms.txt  memory.json  state.json
.claude/skills/: motif-debug.md
.github/workflows/: bench.yml  ci.yml  release.yml  repo-assist.lock.yml  repo-assist.md  update-todo.yml
.spool/events/: 2026-02-12.jsonl  2026-02-14.jsonl  2026-02-15.jsonl  2026-02-17.jsonl  2026-03-03.jsonl  2026-03-04.jsonl
crates/gesso/: Cargo.toml
crates/gesso/benches/: quad_render.rs  scene_build.rs
crates/gesso/examples/: hello_window.rs  quad_bench.rs
crates/gesso_core/: Cargo.toml
crates/gesso_core/src/: context.rs  geometry.rs  lib.rs  renderer.rs
crates/gesso_core/src/metal/: mod.rs
crates/motif/: Cargo.toml
crates/motif/benches/: quad_render.rs  scene_build.rs
crates/motif/examples/: buttons.rs  hello_accessible.rs  hello_element.rs  hello_text.rs  hello_window.rs  hot.rs  instancing_debug.rs  playground.rs  text_metrics.rs  text_metrics_debug.rs  todomvc.rs
crates/motif/src/: hot.rs  lib.rs
crates/motif_core/: Cargo.toml
crates/motif_core/src/: accessibility.rs  animation.rs  arc_str.rs  callbacks.rs  clipboard.rs  context.rs  element.rs  focus.rs  geometry.rs  hit_tree.rs  input.rs  layout.rs  lib.rs  renderer.rs  scene.rs  shared_string.rs  text.rs  theme.rs
crates/motif_core/src/elements/: button.rs  checkbox.rs  div.rs  mod.rs  text.rs  text_input.rs
crates/motif_core/src/input/: bindings.rs  cursor.rs  handler.rs  line_layout.rs  mod.rs  scroll_state.rs  shortcuts.rs  text_state.rs  unicode.rs
crates/motif_core/src/metal/: mod.rs  shaders.metal
crates/motif_debug/: Cargo.toml
crates/motif_debug/src/: input_sim.rs  lib.rs  protocol.rs  screenshot.rs  server.rs  snapshot.rs
crates/motif_debug_cli/: Cargo.toml  README.md
crates/motif_debug_cli/src/: client.rs  main.rs
crates/motif_test/: Cargo.toml
crates/motif_test/src/: harness.rs  hit_tree.rs  lib.rs
docs/: benches.jsonl
docs/plans/: 2026-02-11-metal-renderer-design.md  2026-02-11-metal-renderer-plan.md  2026-02-11-windowing-implementation.md  2026-03-03-hit-testing-design.md  2026-03-03-input-system-design.md
scripts/: gen-todo.sh  release.sh
