[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Nate Butler <iamnbutler@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/iamnbutler/motif"
homepage = "https://github.com/iamnbutler/motif"
keywords = ["ui", "graphics", "rendering", "metal", "gpu"]
categories = ["gui", "graphics", "rendering"]

[workspace.dependencies]
# Internal crates
motif_core = { version = "0.0.1", path = "crates/motif_core" }
motif_debug = { version = "0.0.1", path = "crates/motif_debug" }

# Shared external dependencies
accesskit = "0.24"
glamour = "0.18"
palette = "0.7"
serde_json = "1"
winit = "0.30"

# macOS platform dependencies
objc2 = "0.5"
objc2-app-kit = "0.2"
objc2-foundation = "0.2"

# Optimize dependency compilation in dev builds: dependencies get full optimizations
# while your own code stays at opt-level 0 for fast incremental recompilation.
# This noticeably improves hot-reload iteration speed by reducing framework overhead.
# Resolves spool task: Optimize hot reload dev profile for faster iteration (p3)
[profile.dev.package."*"]
opt-level = 3
