[package]
name = "gesso_core"
version.workspace = true
edition.workspace = true

[dependencies]
glam = "0.32"
glamour = "0.18"
palette = "0.7"
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"
core-graphics-types = "0.1"
foreign-types = "0.5"

[dev-dependencies]
