[package]
name = "gesso_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and rendering primitives for the gesso UI framework"

[dependencies]
glam = "0.32"
glamour = "0.18"
palette = "0.7"
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc = "0.2"
core-graphics-types = "0.1"
foreign-types = "0.5"

[dev-dependencies]
