[package]
name = "motif"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "An immediate-mode UI framework for Rust with GPU rendering"

[dependencies]
accesskit = "0.24"
accesskit_winit = "0.32"
motif_core = { version = "0.0.1", path = "../motif_core" }
glamour = "0.18"
winit = "0.30"

[dev-dependencies]
criterion = "0.5"
motif_debug = { version = "0.0.1", path = "../motif_debug" }
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "scene_build"
harness = false

[[bench]]
name = "quad_render"
harness = false
