[package]
name = "motif"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "An immediate-mode UI framework for Rust with GPU rendering"

[dependencies]
accesskit = { workspace = true }
accesskit_winit = "0.32"
motif_core = { workspace = true }
glamour = { workspace = true }
winit = { workspace = true }
subsecond = { version = "0.7.3", optional = true }
cargo-hot = { version = "0.1", package = "cargo-hot-protocol", optional = true }

[dev-dependencies]
criterion = "0.5"
motif_debug = { workspace = true }
rand = { version = "0.8", features = ["small_rng"] }
serde_json = { workspace = true }

[[bench]]
name = "scene_build"
harness = false

[[bench]]
name = "quad_render"
harness = false

[features]
subsecond = ["dep:subsecond"]
hot = ["dep:cargo-hot"]
