[package]
name = "motif_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and rendering primitives for the motif UI framework"

[dependencies]
accesskit = "0.24"
glam = "0.32"
glamour = "0.18"
palette = "0.7"
parley = { version = "0.7", features = ["accesskit"] }
smallvec = "1.11"
swash = "0.2"
winit = "0.30"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSView", "NSWindow"] }
core-graphics-types = "0.1"
foreign-types = "0.5"

[dev-dependencies]
