[package]
name = "motif_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and rendering primitives for the motif UI framework"

[dependencies]
accesskit = { workspace = true }
glam = "0.32"
glamour = { workspace = true }
palette = { workspace = true }
parley = { version = "0.7", features = ["accesskit"] }
smallvec = "1.11"
swash = "0.2"
taffy = "0.9"
unicode-segmentation = "1.10"
winit = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSView", "NSWindow", "NSPasteboard"] }
core-graphics-types = "0.1"
foreign-types = "0.5"

[dev-dependencies]
