[package]
name = "motif_debug"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Debug server and devtools protocol for motif"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
motif_core = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSRunningApplication"] }
objc2-foundation = { workspace = true }

[dev-dependencies]
linebender_resource_handle = "0.1"
