[package]
name = "motif_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Integration test harness for motif"

[dependencies]
motif_core = { workspace = true }
motif_debug = { workspace = true }
palette = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
